Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long BASEADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
BTI429API ERRVAL __stdcall BTI429_ParamAmplitudeGet(LPUSHORT dacval,INT channum,HCORE handleval);
BTI429API USHORT __stdcall BTI429_ParamBitCountBuild(INT bitcount);
BTI429API ERRVAL __stdcall BTI429_ParamBitRateConfig(ULONG configval,USHORT divval,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ParamBitRateGet(LPUSHORT divval,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedBranch(ULONG condition,SCHNDX destindex,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBranchUpdate(SCHNDX destindex,SCHNDX opcodeindex,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuild(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedCall(ULONG condition,SCHNDX destindex,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedCallUpdate(SCHNDX destindex,SCHNDX opcodeindex,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedEntry(INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedGap(USHORT gapval,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedGapFixed(USHORT gapval,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedGapList(USHORT gapval,LISTADDR listaddr,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedHalt(INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedLog(ULONG condition,USHORT tagval,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedMode(ULONG modeval);
BTI429API SCHNDX __stdcall BTI429_SchedMsg(MSGADDR msgaddr,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedMsgEx(MSGADDR msgaddr,USHORT gapval,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedPause(INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedPulse(INT dionum,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedRestart(INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedReturn(INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ChConfigEx(ULONG configval,USHORT count,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ChOutputStateSet(ULONG pos,ULONG neg,INT channum,HCORE handleval);
BTI429API ULONG __stdcall BTI429_CmdAddr(SCHNDX index,INT channum,HCORE handleval);
BTI429API ULONG __stdcall BTI429_CmdAlloc(INT count,HCORE handleval);
BTI429API ULONG __stdcall BTI429_CmdAllocEx(ULONG configval,INT count,HCORE handleval);
BTI429API ULONG __stdcall BTI429_CmdBaseRd(INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_CmdBaseWr(ULONG addrval,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_CmdClear(INT channum,HCORE handleval);
BTI429API USHORT __stdcall BTI429_CmdCountRd(INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_CmdCountWr(USHORT countval,INT channum,HCORE handleval);
BTI429API USHORT __stdcall BTI429_CmdCtrlRd(SCHNDX index,INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_CmdCtrlWr(USHORT ctrlval,SCHNDX index,INT channum,HCORE handleval);
BTI429API USHORT __stdcall BTI429_CmdCurrRd(INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_CmdCurrWr(USHORT addrval,INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_CmdInit(USHORT opcode,LPUSHORT block);
BTI429API SCHNDX __stdcall BTI429_CmdInsert(LPUSHORT block,INT channum,HCORE handleval);
BTI429API USHORT __stdcall BTI429_CmdMaxLoopRd(INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_CmdMaxLoopWr(USHORT countval,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_CmdRd(LPUSHORT block,ULONG addrval,HCORE handleval);
BTI429API VOID __stdcall BTI429_CmdRestart(INT channum,HCORE handleval);
BTI429API BOOL __stdcall BTI429_CmdShotRd(SCHNDX index,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_CmdShotWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTI429API BOOL __stdcall BTI429_CmdSkipRd(SCHNDX index,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_CmdSkipWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_CmdStackClr(INT channum,HCORE handleval);
BTI429API USHORT __stdcall BTI429_CmdStartRd(INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_CmdStartWr(USHORT addrval,INT channum,HCORE handleval);
BTI429API BOOL __stdcall BTI429_CmdStepRd(SCHNDX index,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_CmdStepWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTI429API INT __stdcall BTI429_CmdTotalRd(INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_CmdTotalWr(INT countval,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_CmdWr(LPUSHORT block,ULONG addrval,HCORE handleval);
BTI429API ULONG __stdcall BTI429_ConvFromArinc(ULONG msgval);
BTI429API ULONG __stdcall BTI429_ConvToArinc(ULONG msgval);
BTI429API INT __stdcall BTI429_DllUsageCount(VOID);
BTI429API ULONG __stdcall BTI429_FilterAddr(INT labelval,INT sdival,INT channum,HCORE handleval);
BTI429API BASEADDR __stdcall BTI429_FilterCreate(HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_FilterFill(MSGADDR msgaddr,BASEADDR baseaddr,HCORE handleval);
BTI429API USHORT __stdcall BTI429_FldGetParBit(ULONG msgval);
BTI429API ULONG __stdcall BTI429_FldPutParBit(ULONG msgval);
BTI429API VOID __stdcall BTI429_GetChanCount(LPINT rcvcount,LPINT xmtcount,HCORE handleval);
BTI429API BOOL __stdcall BTI429_IsChan(INT channum,HCORE handleval);
BTI429API BOOL __stdcall BTI429_IsRcvChan(INT channum,HCORE handleval);
BTI429API BOOL __stdcall BTI429_IsXmtChan(INT channum,HCORE handleval);
BTI429API ULONG __stdcall BTI429_LabelReverse(ULONG msgval);
BTI429API ULONG __stdcall BTI429_ListAddr(INT index,LISTADDR listaddr,HCORE handleval);
BTI429API ULONG __stdcall BTI429_ListAddrEx(INT index,LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ListAdvance(LISTADDR listaddr,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ListClear(LISTADDR listaddr,HCORE handleval);
BTI429API LISTADDR __stdcall BTI429_ListConfig(ULONG configval,INT count,HCORE handleval);
BTI429API LISTADDR __stdcall BTI429_ListConfigEx(ULONG configval,INT count,HCORE handleval);
BTI429API BOOL __stdcall BTI429_ListDataBlkRd(LPULONG dataptr,LPUSHORT datacountptr,LISTADDR listaddr,HCORE handleval);