Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429VB.BAS

Public Declare Function BTI429_ParamAmplitudeGet Lib "BTI429.DLL" Alias "_BTI429_ParamAmplitudeGet@12" (ByRef dacval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ParamBitCountBuild Lib "BTI429.DLL" Alias "_BTI429_ParamBitCountBuild@4" (ByVal bitcount As Long) As Integer
Public Declare Function BTI429_ParamBitRateConfig Lib "BTI429.DLL" Alias "_BTI429_ParamBitRateConfig@16" (ByVal configval As Long, ByVal divval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ParamBitRateGet Lib "BTI429.DLL" Alias "_BTI429_ParamBitRateGet@12" (ByRef divval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedBranch Lib "BTI429.DLL" Alias "_BTI429_SchedBranch@16" (ByVal condition As Long, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedBranchUpdate Lib "BTI429.DLL" Alias "_BTI429_SchedBranchUpdate@16" (ByVal destindex As Long, ByVal opcodeindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedBuild Lib "BTI429.DLL" Alias "_BTI429_SchedBuild@24" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedCall Lib "BTI429.DLL" Alias "_BTI429_SchedCall@16" (ByVal condition As Long, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedCallUpdate Lib "BTI429.DLL" Alias "_BTI429_SchedCallUpdate@16" (ByVal destindex As Long, ByVal opcodeindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedEntry Lib "BTI429.DLL" Alias "_BTI429_SchedEntry@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedGap Lib "BTI429.DLL" Alias "_BTI429_SchedGap@12" (ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedGapFixed Lib "BTI429.DLL" Alias "_BTI429_SchedGapFixed@12" (ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedGapList Lib "BTI429.DLL" Alias "_BTI429_SchedGapList@16" (ByVal gapval As Integer, ByVal listaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedHalt Lib "BTI429.DLL" Alias "_BTI429_SchedHalt@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedLog Lib "BTI429.DLL" Alias "_BTI429_SchedLog@16" (ByVal condition As Long, ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedMode Lib "BTI429.DLL" Alias "_BTI429_SchedMode@4" (ByVal modeval As Long) As Long
Public Declare Function BTI429_SchedMsg Lib "BTI429.DLL" Alias "_BTI429_SchedMsg@12" (ByVal msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedMsgEx Lib "BTI429.DLL" Alias "_BTI429_SchedMsgEx@16" (ByVal msgaddr As Long, ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedPause Lib "BTI429.DLL" Alias "_BTI429_SchedPause@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedPulse Lib "BTI429.DLL" Alias "_BTI429_SchedPulse@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedRestart Lib "BTI429.DLL" Alias "_BTI429_SchedRestart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedReturn Lib "BTI429.DLL" Alias "_BTI429_SchedReturn@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ChConfigEx Lib "BTI429.DLL" Alias "_BTI429_ChConfigEx@16" (ByVal configval As Long, ByVal count As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ChOutputStateSet Lib "BTI429.DLL" Alias "_BTI429_ChOutputStateSet@16" (ByVal pos As Long, ByVal neg As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdAddr Lib "BTI429.DLL" Alias "_BTI429_CmdAddr@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdAlloc Lib "BTI429.DLL" Alias "_BTI429_CmdAlloc@8" (ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdAllocEx Lib "BTI429.DLL" Alias "_BTI429_CmdAllocEx@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdBaseRd Lib "BTI429.DLL" Alias "_BTI429_CmdBaseRd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI429_CmdBaseWr Lib "BTI429.DLL" Alias "_BTI429_CmdBaseWr@12" (ByVal addrval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI429_CmdClear Lib "BTI429.DLL" Alias "_BTI429_CmdClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdCountRd Lib "BTI429.DLL" Alias "_BTI429_CmdCountRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI429_CmdCountWr Lib "BTI429.DLL" Alias "_BTI429_CmdCountWr@12" (ByVal countval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI429_CmdCtrlRd Lib "BTI429.DLL" Alias "_BTI429_CmdCtrlRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI429_CmdCtrlWr Lib "BTI429.DLL" Alias "_BTI429_CmdCtrlWr@16" (ByVal ctrlval As Integer, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI429_CmdCurrRd Lib "BTI429.DLL" Alias "_BTI429_CmdCurrRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI429_CmdCurrWr Lib "BTI429.DLL" Alias "_BTI429_CmdCurrWr@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Sub BTI429_CmdInit Lib "BTI429.DLL" Alias "_BTI429_CmdInit@8" (ByVal opcode As Integer, ByRef block As Integer)
Public Declare Function BTI429_CmdInsert Lib "BTI429.DLL" Alias "_BTI429_CmdInsert@12" (ByRef block As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdMaxLoopRd Lib "BTI429.DLL" Alias "_BTI429_CmdMaxLoopRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI429_CmdMaxLoopWr Lib "BTI429.DLL" Alias "_BTI429_CmdMaxLoopWr@12" (ByVal countval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI429_CmdRd Lib "BTI429.DLL" Alias "_BTI429_CmdRd@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI429_CmdRestart Lib "BTI429.DLL" Alias "_BTI429_CmdRestart@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI429_CmdShotRd Lib "BTI429.DLL" Alias "_BTI429_CmdShotRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdShotWr Lib "BTI429.DLL" Alias "_BTI429_CmdShotWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdSkipRd Lib "BTI429.DLL" Alias "_BTI429_CmdSkipRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdSkipWr Lib "BTI429.DLL" Alias "_BTI429_CmdSkipWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI429_CmdStackClr Lib "BTI429.DLL" Alias "_BTI429_CmdStackClr@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI429_CmdStartRd Lib "BTI429.DLL" Alias "_BTI429_CmdStartRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI429_CmdStartWr Lib "BTI429.DLL" Alias "_BTI429_CmdStartWr@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI429_CmdStepRd Lib "BTI429.DLL" Alias "_BTI429_CmdStepRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdStepWr Lib "BTI429.DLL" Alias "_BTI429_CmdStepWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_CmdTotalRd Lib "BTI429.DLL" Alias "_BTI429_CmdTotalRd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI429_CmdTotalWr Lib "BTI429.DLL" Alias "_BTI429_CmdTotalWr@12" (ByVal countval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI429_CmdWr Lib "BTI429.DLL" Alias "_BTI429_CmdWr@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ConvFromArinc Lib "BTI429.DLL" Alias "_BTI429_ConvFromArinc@4" (ByVal msgval As Long) As Long
Public Declare Function BTI429_ConvToArinc Lib "BTI429.DLL" Alias "_BTI429_ConvToArinc@4" (ByVal msgval As Long) As Long
Public Declare Function BTI429_DllUsageCount Lib "BTI429.DLL" Alias "_BTI429_DllUsageCount@0" () As Long
Public Declare Function BTI429_FilterAddr Lib "BTI429.DLL" Alias "_BTI429_FilterAddr@16" (ByVal labelval As Long, ByVal sdival As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_FilterCreate Lib "BTI429.DLL" Alias "_BTI429_FilterCreate@4" (ByVal handleval As Long) As Long
Public Declare Function BTI429_FilterFill Lib "BTI429.DLL" Alias "_BTI429_FilterFill@12" (ByVal msgaddr As Long, ByVal basevaladdr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_FldGetParBit Lib "BTI429.DLL" Alias "_BTI429_FldGetParBit@4" (ByVal msgval As Long) As Integer
Public Declare Function BTI429_FldPutParBit Lib "BTI429.DLL" Alias "_BTI429_FldPutParBit@4" (ByVal msgval As Long) As Long
Public Declare Sub BTI429_GetChanCount Lib "BTI429.DLL" Alias "_BTI429_GetChanCount@12" (ByRef rcvcount As Long, ByRef xmtcount As Long, ByVal handleval As Long)
Public Declare Function BTI429_IsChan Lib "BTI429.DLL" Alias "_BTI429_IsChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_IsRcvChan Lib "BTI429.DLL" Alias "_BTI429_IsRcvChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_IsXmtChan Lib "BTI429.DLL" Alias "_BTI429_IsXmtChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_LabelReverse Lib "BTI429.DLL" Alias "_BTI429_LabelReverse@4" (ByVal msgval As Long) As Long
Public Declare Function BTI429_ListAddr Lib "BTI429.DLL" Alias "_BTI429_ListAddr@12" (ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ListAddrEx Lib "BTI429.DLL" Alias "_BTI429_ListAddrEx@16" (ByVal index As Long, ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function BTI429_ListAdvance Lib "BTI429.DLL" Alias "_BTI429_ListAdvance@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ListClear Lib "BTI429.DLL" Alias "_BTI429_ListClear@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ListConfig Lib "BTI429.DLL" Alias "_BTI429_ListConfig@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ListConfigEx Lib "BTI429.DLL" Alias "_BTI429_ListConfigEx@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ListDataBlkRd Lib "BTI429.DLL" Alias "_BTI429_ListDataBlkRd@16" (ByRef dataptr As Long, ByRef datacountptr As Integer, ByVal listaddr As Long, ByVal handleval As Long) As Long
